tests/expected/task-1/31-missing-fields.uc.out
---
test: run suites/task-1/31-missing-fields.uc
---
suites/task-1/31-missing-fields.uc:4:5: execution error: Non-existing field (b) access in {a:1}
     r.b = 1;
      ^


exit: 1
